// Vitest Snapshot v1

exports[`<Button /> > should render 1`] = `
<StyledButton
  color="grey"
  disabled={false}
  onClick={[MockFunction spy]}
  type="button"
/>
`;

exports[`<Button /> > should render with children 1`] = `
<StyledButton
  color="grey"
  disabled={false}
  onClick={[MockFunction spy]}
  type="button"
>
  <span>
    <span>
      Test
    </span>
  </span>
</StyledButton>
`;

exports[`<Button /> > should render with icon 1`] = `
<StyledButton
  color="grey"
  disabled={false}
  onClick={[MockFunction spy]}
  type="button"
>
  <Icon
    name="folder"
  />
</StyledButton>
`;

exports[`<Button /> > should render with tooltip 1`] = `
<Tooltip
  tip="Tooltip"
>
  <StyledButton
    color="grey"
    disabled={false}
    onClick={[MockFunction spy]}
    type="button"
  />
</Tooltip>
`;

exports[`<Button /> > should render with tooltip using tipPlacement prop 1`] = `
<Tooltip
  tip="Tooltip"
>
  <StyledButton
    color="grey"
    disabled={false}
    onClick={[MockFunction spy]}
    type="button"
  />
</Tooltip>
`;
